--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
-@import url(/vendor/normalize.css);
-@import url(/vendor/fonts.css);
-@import url(/blocks/page.css);
-@import url(/blocks/author.css);
-@import url(/blocks/elements.css);
-@import url(/blocks/element.css);
-@import url(/blocks/footer.css);
-@import url(/blocks/modal.css);
-@import url(/blocks/image-modal.css);
+@import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/page.css);
+@import url(../blocks/author.css);
+@import url(../blocks/elements.css);
+@import url(../blocks/element.css);
+@import url(../blocks/footer.css);
+@import url(../blocks/modal.css);
+@import url(../blocks/image-modal.css);
 
 input.valid {
   border-bottom: 2px solid green;
