--- a/blocks/image-modal.css
+++ b/blocks/image-modal.css
@@ -1,13 +1,10 @@
 .image-modal {
-  display: none;
-  position: fixed;
-  inset: 0;
-  z-index: 1000;
-  background-color: rgba(0, 0, 0, 0.85);
+  position: relative;
+  display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
+  max-width: 90%;
+  max-height: 90%;
 }
 
 .image-modal-wrapper {
@@ -25,12 +22,15 @@
 }
 
 .image-modal-close {
-  position: absolute;
-  top: -40px;
-  right: -10px;
-  font-size: 40px;
+  position: relative;
+  top: 10px;
+  right: 10px;
+  font-size: 2rem;
   color: white;
+  background: none;
+  border: none;
   cursor: pointer;
+  z-index: 1001;
 }
 
 .image-modal-close:hover {
