--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -4,10 +4,10 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   z-index: 1000;
 }
 
@@ -23,11 +23,13 @@
 .close-button {
   position: absolute;
   top: 10px;
-  right: 15px;
-  font-size: 40px;
-  cursor: pointer;
+  right: 10px;
+  font-size: 2rem;
+  color: black;
+  background: none;
   border: none;
-  background: transparent;
+  cursor: pointer;
+  z-index: 1001;
 }
 
 .close-button:hover {
